--- a/shop_car.html
+++ b/shop_car.html
@@ -65,8 +65,10 @@
 							<dd>
 								<input type="text" placeholder="最多输入26个汉字" style="width:110px;">
 								或固定电话：
-								<input type="text" placeholder="区号" style="width:62px;">-
-								<input type="text" placeholder="电话号码" style="width:96px;">-
+								<input type="text" placeholder="区号" style="width:62px;">
+								-
+								<input type="text" placeholder="电话号码" style="width:96px;">
+								-
 								<input type="text" placeholder="分机号(可选)" style="width:96px;">
 							</dd>
 						</dl>
@@ -197,11 +199,4 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
 
